added background and update utility

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="styles.css">
+  <link href="./src/output.css" rel="stylesheet">
   <script src="script.js" defer></script>
   <title>Frontend Mentor | Conference ticket generator</title>
 
@@ -14,12 +14,14 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
-  <link rel="stylesheet" href="style.css">
+  <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
-  <div class="pattern-lines"></div>
+  <div class="container"></div>
+  <!-- <div class="container2"></div> -->
+  <!-- <div class="pattern-lines"></div> -->
   <!-- Form starts -->
-
+<div>
   Your Journey to Coding Conf 2025 Starts Here!
 
   Secure your spot at next year's biggest coding conference.
@@ -48,7 +50,7 @@
 
   Coding Conf
   Jan 31, 2025 / Austin, TX
-
+</div>
   <!-- Generated tickets ends -->
   
   <div class="attribution">
