refactoring left to do

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 					<img
 						src="/assets/images/pattern-circle.svg"
 						alt=""
-						class="fixed laptop:absolute -z-10 right-[-5%] laptop:right-[-30%] laptop:top-[-40px]"
+						class=" fixed laptop:absolute -z-10 right-[-15%] md:right-[5%] laptop:right-[-30%] laptop:top-[-40px] w-[140px] h-[140px] laptop:w-[200px] laptop:h-[200px]"
 					/>
 					<section class="">
 						<label for="name">Full Name</label>
@@ -143,19 +143,18 @@
 							<input
 								type="text"
 								id="name"
-								class="w-full border-Neutral-500 border-2 rounded-xl bg-transparent p-1 text-[1.2rem]"
+								class="w-full border-Neutral-500 border-2 rounded-xl bg-transparent  text-[1.2rem] p-2 md:p-4"
 							/>
 							<div
 								class="absolute h-full top-0 w-full rounded-xl bg-Neutral-500 opacity-20 group-hover:opacity-60 z-[-10]"
 							></div>
 							<div
-								class=" gap-3 text-[1rem] mt-2 file-info absolute hidden  name-error"
+								class="gap-3 text-[1rem] mt-2 file-info absolute hidden name-error"
 							>
 								<img
 									src="/assets/images/icon-info.svg"
 									alt=""
 									class="icon error"
-
 								/>
 								<h4 class="file-text text-Gradient-text">
 									Please enter your name.
@@ -169,7 +168,7 @@
 							<input
 								type="email"
 								id="email"
-								class="w-full border-Neutral-500 border-2 rounded-xl bg-transparent p-1"
+								class="w-full border-Neutral-500 border-2 rounded-xl bg-transparent text-[1.2rem] p-2  md:p-4"
 								placeholder="example@mail.com"
 							/>
 							<div
@@ -195,14 +194,14 @@
 							<input
 								type="text"
 								id="githubname"
-								class="w-full border-Neutral-500 border-2 rounded-xl bg-transparent p-1"
+								class="w-full border-Neutral-500 border-2 rounded-xl bg-transparent text-[1.2rem] p-2 md:p-4"
 								placeholder="@yourusername"
 							/>
 							<div
 								class="absolute h-full top-0 w-full bg-Neutral-500 rounded-xl opacity-20 group-hover:opacity-60 z-[-10]"
 							></div>
 							<div
-								class=" gap-3 text-[1rem] mt-2 file-info absolute hidden git-error"
+								class="gap-3 text-[1rem] mt-2 file-info absolute hidden git-error"
 							>
 								<img
 									src="/assets/images/icon-info.svg"
